--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
         <relativePath/>
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>test-tree-menu</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>test-tree-menu</name>
+    <artifactId>tree-menu</artifactId>
+    <version>0.0.3</version>
+    <name>tree-menu</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
@@ -76,6 +77,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
